--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
+    "husky": "^9.1.6",
     "prettier": "^3.0.3",
     "rimraf": "^6.0.1",
     "typescript": "^5.3.3"
@@ -42,7 +43,7 @@
     "lint:fix": "eslint . --report-unused-disable-directives --fix",
     "format": "prettier .  --write",
     "format:check": "prettier --check .",
-    "prepare": "npm run build",
+    "prepare": "husky",
     "prepublishOnly": "npm run build"
   }
 }
