--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typespec-typescript-emitter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A TypeSpec library providing an emitter that generates TypeScript types and a structured routes object for robust importing",
   "homepage": "https://github.com/crowbait/typespec-typescript-emitter#readme",
   "bugs": "https://github.com/crowbait/typespec-typescript-emitter/issues",
@@ -31,8 +31,8 @@
     "typescript-eslint": "^8.15.0"
   },
   "peerDependencies": {
-    "@typespec/compiler": "0.x",
-    "@typespec/http": "0.x"
+    "@typespec/compiler": "^1.0.0",
+    "@typespec/http": "^1.0.0"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
