--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "prepublishOnly": "npm run build",
-    "test": "vitest run"
+    "test": "npm run build && vitest run"
   }
 }
