--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.0",
   "description": "A TypeSpec library providing an emitter that generates TypeScript types and a structured routes object for robust importing",
   "homepage": "https://github.com/crowbait/typespec-typescript-emitter#readme",
+  "repository": "https://github.com/crowbait/typespec-typescript-emitter",
   "bugs": "https://github.com/crowbait/typespec-typescript-emitter/issues",
   "license": "MIT",
   "author": {
